compiler/tests/compile-error/record-errors.arret
(import [stdlib base])

(defrecord foo) ;~ ERROR wrong argument count; expected 2

(defrecord :keyword ())
          ;^^^^^^^^ ERROR expected record type constuctor declaration, found keyword

(defrecord _ [])
            ;^^ ERROR expected record field list, found empty vector

(defrecord foo (_))
               ;^ ERROR anonymous record fields are not supported

(defrecord foo (1))
               ;^ ERROR expected record field declaration, found integer

(defrecord foo ([]))
               ;^^ ERROR expected record field declaration, found empty vector

(defrecord (Foo 1) ())
               ;^ ERROR bad polymorphic variable declaration

(defrecord (Point [N Num]) ([x Num] [y Num]))

(def [_ (Point Int Float)] (Point 1 2.0))
       ;^^^^^^^^^^^^^^^^^ ERROR wrong argument count; expected 1

(def [_ (Point Bool)] (Point true))
              ;^^^^ ERROR mismatched types

; These polymorphic variables are actually fixed to a single type
(defrecord (FixedPolyRecord [A Int] [->_ ->]) ([pred (A ->_ Bool)]))

(def [_ (FixedPolyRecord Float ->)] 1)
                        ;^^^^^ ERROR mismatched types

(def [_ (FixedPolyRecord Int ->!)] 1)
                            ;^^^ ERROR mismatched purities

(def [_ (FixedPolyRecord Int Int)] 1)
                            ;^^^ ERROR type cannot be used as a purity

(def [_ (FixedPolyRecord Int [])] 1)
                            ;^^ ERROR empty vector cannot be used as a purity